# RPi

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  config.yml  index.html
GH-page/: .Rhistory  README.md  RPi_index.Rmd  index.html  knit_rpi.R  knitt_me.R  styles.css
OtherTBD-Projects/: 2024-08-16-home-assistant-mqtt.md  2024-12-12-microcontr.md  2024-12-12-microcontrollers.md  2024-12-31-DS18B20-python-timescale.md  2024-12-31-GY273.md  2024-12-31-dht22-py-sql-mongodb.md  2024-12-31-dht22.md  2024-12-31-esp32.md  2025-12-12-rpi-lcd.md  BME280.md  MLX90614.md  Readme.md  dht11-python-influxdb.md  dht22-python-ES.md  dht22-python-distributed.md  esp32-dht22.md  esp32.md  esp32dsb18b20.md  ky008.md
Z_Docker_Config_Files/: elk_docker-compose.yml  google_photos_alternative.yml  media_server.yml  prometheus_grafana_docker-compose.yml  readme.md  seedbox_vpn.yml  thingsboard_docker-compose.yml
Z_IoT/: Readme.md
Z_MQTT/: Readme.md
Z_MicroControllers/: deep-sleep.md  readme.md
Z_MicroControllers/dht-webapp/: README.md  index.html  main.py  mqtt_to_db.py  pyproject.toml  requirements.txt
Z_OtherProjects/: 2024-01-01-ML-rpi.md  2024-08-28-iot-edge-ekuiper.md  2024-12-11-rpi-gps-superset.md  2024-12-12-future-projects.md  2024-12-12-microcontr.md  2024-12-12-microcontrollers.md  2024-12-31-GY273.md  2024-12-31-HA.md  2024-12-31-MLOps.md  2024-12-31-cassandra.md  2024-12-31-dht22-python-ES.md  2024-12-31-dht22.md  2024-12-31-esp32.md  2024-12-31-kubernetes-rpi.md  2024-12-31-rpi-cv.md  2024-12-31-rpi-llm-local.md  2024-12-31-rpi_wifi_ethernet_bridge.md  DRON.md  (+18 more)
(+306 files in other folders)
