[project]
name = "dht-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
]
